@@ -6,21 +6,11 @@
 </HEAD>
 <BODY>
 
-<CENTER><H1>Free Software Foundation Europe</H1></CENTER>
-
-<!-- TOC -->
-<H4>Table of Contents</H4>
-<UL>
-  <LI><A HREF="#introduction" NAME="TOCintroduction">Introduction to the
-  FSFE</A></li>
-  <LI><A HREF="#mailinglists" NAME="TOCmailinglists">Mailinglists</A></li>
-  <LI><A HREF="#documents" NAME="TOCdocuments">Documents</A></li>
-  <li><a href="#events" name="TOCevents">Events</a></li>
-</UL>
+<H1>Free Software Foundation Europe</H1>
 
 <!-- Introduction -->
 <hr>
-<h4><a name="introduction" href="#TOCintroduction">Introduction to the
+<h4><a name="introduction">Introduction to the
 FSFE</a></h4>
 <p>This will become the web site of the <B>FSF Europe</B>, an
 organization dedicated to Free Software activities in Europe. As the
@@ -43,7 +33,7 @@ information, we also recommend checking out the <A
 HREF="http://mailman.fsfeurope.org">mailing lists</a>.</p>
 
 <!-- Mailinglists -->
-<h4><a name="mailinglists" href="#TOCmailinglists">Mailinglists</a></h4>
+<h4><a name="mailinglists">Mailinglists</a></h4>
 <p>To subscibe to any of these mailinglists please send an email with subject
 "subscribe" to <em>&lt;listname&gt;-request@fsfeurope.org</em> or use the web
 interface provided for each list.</p>
@@ -65,7 +55,7 @@ interface provided for each list.</p>
 </ul>
 
 <!-- Documents -->
-<h4><a name="documents" href="#TOCdocuments">Documents</a></h4>
+<h4><a name="documents">Documents</a></h4>
 <p>The following documents are available.</p>
 <ul>
   <li><a href="documents/doi.html">FSFE Declaration of Intent</a></li>
@@ -73,25 +63,29 @@ interface provided for each list.</p>
 </ul>
 
 <!-- Events -->
-<h4><a name="events" href="#TOCevents">Events</a></h4>
+<h4><a name="events">Events</a></h4>
 <p>Still to come ...</p>
 
 <!-- footer -->
 <HR>
-<P>Return to the <A HREF="/">FSFE home page</A>.</P>
+<P>Original of this page is <A HREF="http://www.fsfeurope.org/"><tt>fsfeurope.org</tt></A>.</P>
 
-<p>Please send FSFE questions to
-<A HREF="mailto:team@fsfeurope.org"><EM>team@fsfeurope.org</EM></A></P>
+<address>
+<p>
+FSFE and other questions:
+<A HREF="mailto:team@fsfeurope.org"><EM>team@fsfeurope.org</EM></A>
+<br>
 
-<p>Please send comments on these web pages to
-<A HREF="mailto:webmasters@fsfeurope.org"><EM>webmasters@fsfeurope.org</EM></A>,
-send other questions to
-<A HREF="mailto:team@fsfeurope.org"><EM>team@fsfeurope.org</EM></A>.</p>
+Web pages comments:
+<A HREF="mailto:webmasters@fsfeurope.org"><EM>webmasters@fsfeurope.org</EM></A>
+</address>
 
-<P>Copyright (C) 2001 Free Software Foundation Europe</p>
-
-<p>Verbatim copying and distribution of this entire article is
+<small>
+<P>Copyright (C) 2001 Free Software Foundation Europe
+<br>
+Verbatim copying and distribution of this entire article is
 permitted in any medium, provided this notice is preserved.</p>
+</small>
 
 <P>
 Updated:
