@@ -1,4 +1,3 @@
-
 - Below the mail sent by Georg on March 1st 2001 on fsfeurope and
 announce mailing lists.
 
