@@ -1,3 +1,6 @@
+2001-03-15 Bernhard
+	* reworked index.html page, as example.
+
 2001-03-06  Georg C. F. Greve  <greve@gnu.org>
 
 	* events/: moved file to FSFE repository to have this one
